@@ -6,7 +6,7 @@
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>nmap</strong></big></big> (version 0.2.4)</font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>nmap</strong></big></big> (version 0.2.7)</font></td
 ><td align=right valign=bottom
 ><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/home/xael/ESPACE_KM/python/python-nmap/nmap/nmap.py">/home/xael/ESPACE_KM/python/python-nmap/nmap/nmap.py</a></font></td></tr></table>
     <p><tt>nmap.py&nbsp;-&nbsp;version&nbsp;and&nbsp;date,&nbsp;see&nbsp;below<br>
@@ -14,6 +14,8 @@
 Author&nbsp;:&nbsp;Alexandre&nbsp;Norman&nbsp;-&nbsp;norman&nbsp;at&nbsp;xael.org<br>
 Contributors:&nbsp;Steve&nbsp;'Ashcrow'&nbsp;Milner&nbsp;-&nbsp;steve&nbsp;at&nbsp;gnulinux.net<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brian&nbsp;Bustin&nbsp;-&nbsp;brian&nbsp;at&nbsp;bustin.us<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;old.schepperhand<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Johan&nbsp;Lundberg&nbsp;<br>
 Licence&nbsp;:&nbsp;GPL&nbsp;v3&nbsp;or&nbsp;any&nbsp;later&nbsp;version<br>
 &nbsp;<br>
 &nbsp;<br>
@@ -41,29 +43,31 @@ Test&nbsp;strings&nbsp;:<br>
 ...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;nm.scan(arguments='-wrongargs')<br>
 ...&nbsp;except&nbsp;nmap.<a href="#PortScannerError">PortScannerError</a>:<br>
 ...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pass<br>
+&gt;&gt;&gt;&nbsp;'error'&nbsp;in&nbsp;nm.scan('yahoo.fs',&nbsp;arguments='-sP')['nmap']['scaninfo']<br>
+True<br>
 &gt;&gt;&gt;&nbsp;r=nm.scan('127.0.0.1',&nbsp;'22-443')<br>
 &gt;&gt;&gt;&nbsp;nm.command_line()<br>
 'nmap&nbsp;-oX&nbsp;-&nbsp;-p&nbsp;22-443&nbsp;-sV&nbsp;127.0.0.1'<br>
 &gt;&gt;&gt;&nbsp;nm.scaninfo()<br>
-{'tcp':&nbsp;{'services':&nbsp;'22-443',&nbsp;'method':&nbsp;'connect'}}<br>
+{'tcp':&nbsp;{'services':&nbsp;'22-443',&nbsp;'method':&nbsp;'syn'}}<br>
 &gt;&gt;&gt;&nbsp;nm.all_hosts()<br>
 ['127.0.0.1']<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1'].hostname()<br>
-'localhost.localdomain'<br>
+'localhost'<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1'].state()<br>
 'up'<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1'].all_protocols()<br>
-['tcp']<br>
+['addresses',&nbsp;'tcp']<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1']['tcp'].keys()<br>
-dict_keys([80,&nbsp;25,&nbsp;443,&nbsp;22,&nbsp;111])<br>
+dict_keys([139,&nbsp;111,&nbsp;80,&nbsp;53,&nbsp;22,&nbsp;25,&nbsp;443])<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1'].has_tcp(22)<br>
 True<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1'].has_tcp(23)<br>
 False<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1']['tcp'][22]<br>
-{'state':&nbsp;'open',&nbsp;'reason':&nbsp;'syn-ack',&nbsp;'name':&nbsp;'ssh'}<br>
+{'product':&nbsp;'OpenSSH',&nbsp;'name':&nbsp;'ssh',&nbsp;'extrainfo':&nbsp;'protocol&nbsp;2.0',&nbsp;'reason':&nbsp;'syn-ack',&nbsp;'state':&nbsp;'open',&nbsp;'version':&nbsp;'5.9p1&nbsp;Debian&nbsp;5ubuntu1',&nbsp;'conf':&nbsp;'10'}<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1'].tcp(22)<br>
-{'state':&nbsp;'open',&nbsp;'reason':&nbsp;'syn-ack',&nbsp;'name':&nbsp;'ssh'}<br>
+{'product':&nbsp;'OpenSSH',&nbsp;'name':&nbsp;'ssh',&nbsp;'extrainfo':&nbsp;'protocol&nbsp;2.0',&nbsp;'reason':&nbsp;'syn-ack',&nbsp;'state':&nbsp;'open',&nbsp;'version':&nbsp;'5.9p1&nbsp;Debian&nbsp;5ubuntu1',&nbsp;'conf':&nbsp;'10'}<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1']['tcp'][22]['state']<br>
 'open'<br>
 &gt;&gt;&gt;&nbsp;nm.scanstats()['uphosts']<br>
@@ -82,9 +86,11 @@ True<br>
 ['127.0.0.0',&nbsp;'127.0.0.1',&nbsp;'127.0.0.2',&nbsp;'127.0.0.3']<br>
 &gt;&gt;&gt;&nbsp;r=nm.scan('127.0.0.1',&nbsp;arguments='-O')<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1']['osclass']<br>
-[{'vendor':&nbsp;u'Linux',&nbsp;'osfamily':&nbsp;u'Linux',&nbsp;'type':&nbsp;u'general&nbsp;purpose',&nbsp;'osgen':&nbsp;u'2.6.X',&nbsp;'accuracy':&nbsp;u'98'},&nbsp;{'vendor':&nbsp;u'Netgear',&nbsp;'osfamily':&nbsp;u'embedded',&nbsp;'type':&nbsp;u'WAP',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;u'Gemtek',&nbsp;'osfamily':&nbsp;u'embedded',&nbsp;'type':&nbsp;u'WAP',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;u'Siemens',&nbsp;'osfamily':&nbsp;u'embedded',&nbsp;'type':&nbsp;u'WAP',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;u'Linux',&nbsp;'osfamily':&nbsp;u'Linux',&nbsp;'type':&nbsp;u'general&nbsp;purpose',&nbsp;'osgen':&nbsp;u'2.4.X',&nbsp;'accuracy':&nbsp;u'90'},&nbsp;{'vendor':&nbsp;u'Linksys',&nbsp;'osfamily':&nbsp;u'embedded',&nbsp;'type':&nbsp;u'WAP',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;u'Linux',&nbsp;'osfamily':&nbsp;u'Linux',&nbsp;'type':&nbsp;u'WAP',&nbsp;'osgen':&nbsp;u'2.4.X',&nbsp;'accuracy':&nbsp;u'90'},&nbsp;{'vendor':&nbsp;u'Nokia',&nbsp;'osfamily':&nbsp;u'Linux',&nbsp;'type':&nbsp;u'general&nbsp;purpose',&nbsp;'osgen':&nbsp;u'2.6.X',&nbsp;'accuracy':&nbsp;u'89'}]<br>
+[{'vendor':&nbsp;'Linux',&nbsp;'osfamily':&nbsp;'Linux',&nbsp;'type':&nbsp;'general&nbsp;purpose',&nbsp;'osgen':&nbsp;'2.6.X',&nbsp;'accuracy':&nbsp;'96'},&nbsp;{'vendor':&nbsp;'AXIS',&nbsp;'osfamily':&nbsp;'Linux',&nbsp;'type':&nbsp;'webcam',&nbsp;'osgen':&nbsp;'2.6.X',&nbsp;'accuracy':&nbsp;'91'},&nbsp;{'vendor':&nbsp;'Crestron',&nbsp;'osfamily':&nbsp;'2-Series',&nbsp;'type':&nbsp;'specialized',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;'Gemtek',&nbsp;'osfamily':&nbsp;'embedded',&nbsp;'type':&nbsp;'WAP',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;'Siemens',&nbsp;'osfamily':&nbsp;'embedded',&nbsp;'type':&nbsp;'WAP',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;'Linux',&nbsp;'osfamily':&nbsp;'Linux',&nbsp;'type':&nbsp;'general&nbsp;purpose',&nbsp;'osgen':&nbsp;'2.4.X',&nbsp;'accuracy':&nbsp;'88'},&nbsp;{'vendor':&nbsp;'Linux',&nbsp;'osfamily':&nbsp;'Linux',&nbsp;'type':&nbsp;'WAP',&nbsp;'osgen':&nbsp;'2.6.X',&nbsp;'accuracy':&nbsp;'88'},&nbsp;{'vendor':&nbsp;'Check&nbsp;Point',&nbsp;'osfamily':&nbsp;'embedded',&nbsp;'type':&nbsp;'firewall',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;'Check&nbsp;Point',&nbsp;'osfamily':&nbsp;'Linux',&nbsp;'type':&nbsp;'firewall',&nbsp;'osgen':&nbsp;'2.4.X',&nbsp;'accuracy':&nbsp;'88'},&nbsp;{'vendor':&nbsp;'Linux',&nbsp;'osfamily':&nbsp;'Linux',&nbsp;'type':&nbsp;'WAP',&nbsp;'osgen':&nbsp;'2.4.X',&nbsp;'accuracy':&nbsp;'88'},&nbsp;{'vendor':&nbsp;'Linux',&nbsp;'osfamily':&nbsp;'Linux',&nbsp;'type':&nbsp;'general&nbsp;purpose',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;'Vodavi',&nbsp;'osfamily':&nbsp;'embedded',&nbsp;'type':&nbsp;'PBX',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''},&nbsp;{'vendor':&nbsp;'Lexmark',&nbsp;'osfamily':&nbsp;'embedded',&nbsp;'type':&nbsp;'printer',&nbsp;'osgen':&nbsp;'',&nbsp;'accuracy':&nbsp;''}]<br>
 &gt;&gt;&gt;&nbsp;nm['127.0.0.1']['fingerprint']<br>
-'OS:SCAN(V=5.50%D=11/9%OT=22%CT=1%CU=37937%PV=N%DS=0%DC=L%G=Y%TM=4EBAE79D%P=\nOS:i686-pc-linux-gnu)SEQ(SP=103%GCD=1%ISR=10D%TI=Z%CI=Z%II=I%TS=8)OPS(O1=M4\nOS:00CST11NW6%O2=M400CST11NW6%O3=M400CNNT11NW6%O4=M400CST11NW6%O5=M400CST11\nOS:NW6%O6=M400CST11)WIN(W1=8000%W2=8000%W3=8000%W4=8000%W5=8000%W6=8000)ECN\nOS:(R=Y%DF=Y%T=40%W=8018%O=M400CNNSNW6%CC=Y%Q=)T1(R=Y%DF=Y%T=40%S=O%A=S+%F=\nOS:AS%RD=0%Q=)T2(R=N)T3(R=Y%DF=Y%T=40%W=8000%S=O%A=S+%F=AS%O=M400CST11NW6%R\nOS:D=0%Q=)T4(R=Y%DF=Y%T=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)T5(R=Y%DF=Y%T=40%W=0%\nOS:S=Z%A=S+%F=AR%O=%RD=0%Q=)T6(R=Y%DF=Y%T=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)T7(\nOS:R=Y%DF=Y%T=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)U1(R=Y%DF=N%T=40%IPL=164%UN=0\nOS:%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUD=G)IE(R=Y%DFI=N%T=40%CD=S)\n'</tt></p>
+'OS:SCAN(V=5.21%D=2/24%OT=22%CT=1%CU=42516%PV=N%DS=0%DC=L%G=Y%TM=512A8382%P=\nOS:x86_64-unknown-linux-gnu)SEQ(SP=106%GCD=1%ISR=10A%TI=Z%CI=Z%II=I%TS=8)OP\nOS:S(O1=M400CST11NW6%O2=M400CST11NW6%O3=M400CNNT11NW6%O4=M400CST11NW6%O5=M4\nOS:00CST11NW6%O6=M400CST11)WIN(W1=8000%W2=8000%W3=8000%W4=8000%W5=8000%W6=8\nOS:000)ECN(R=Y%DF=Y%T=40%W=8018%O=M400CNNSNW6%CC=Y%Q=)T1(R=Y%DF=Y%T=40%S=O%\nOS:A=S+%F=AS%RD=0%Q=)T2(R=N)T3(R=N)T4(R=Y%DF=Y%T=40%W=0%S=A%A=Z%F=R%O=%RD=0\nOS:%Q=)T5(R=Y%DF=Y%T=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)T6(R=Y%DF=Y%T=40%W=0%S\nOS:=A%A=Z%F=R%O=%RD=0%Q=)T7(R=Y%DF=Y%T=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)U1(R\nOS:=Y%DF=N%T=40%IPL=164%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUD=G)IE(R=Y%DFI=N\nOS:%T=40%CD=S)\n'<br>
+&gt;&gt;&gt;&nbsp;nm.csv()<br>
+'host;protocol;port;name;state;product;extrainfo;reason;version;conf\r\n127.0.0.1;tcp;22;ssh;open;;;syn-ack;;3\r\n127.0.0.1;tcp;25;smtp;open;;;syn-ack;;3\r\n127.0.0.1;tcp;53;domain;open;;;syn-ack;;3\r\n127.0.0.1;tcp;80;http;open;;;syn-ack;;3\r\n127.0.0.1;tcp;111;rpcbind;open;;;syn-ack;;3\r\n127.0.0.1;tcp;139;netbios-ssn;open;;;syn-ack;;3\r\n127.0.0.1;tcp;443;https;open;;;syn-ack;;3\r\n127.0.0.1;tcp;445;microsoft-ds;open;;;syn-ack;;3\r\n127.0.0.1;tcp;631;ipp;open;;;syn-ack;;3\r\n127.0.0.1;tcp;2049;nfs;open;;;syn-ack;;3\r\n127.0.0.1;tcp;3306;mysql;open;;;syn-ack;;3\r\n127.0.0.1;tcp;5222;unknown;open;;;syn-ack;;3\r\n127.0.0.1;tcp;5269;unknown;open;;;syn-ack;;3\r\n'</tt></p>
 <p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#aa55cc">
@@ -93,15 +99,17 @@ True<br>
     
 <tr><td bgcolor="#aa55cc"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
 <td width="100%"><table width="100%" summary="list"><tr><td width="25%" valign=top><a href="collections.html">collections</a><br>
-<a href="os.html">os</a><br>
+<a href="csv.html">csv</a><br>
+<a href="io.html">io</a><br>
+</td><td width="25%" valign=top><a href="os.html">os</a><br>
 <a href="re.html">re</a><br>
-</td><td width="25%" valign=top><a href="shlex.html">shlex</a><br>
-<a href="string.html">string</a><br>
+<a href="shlex.html">shlex</a><br>
+</td><td width="25%" valign=top><a href="string.html">string</a><br>
 <a href="subprocess.html">subprocess</a><br>
-</td><td width="25%" valign=top><a href="sys.html">sys</a><br>
-<a href="types.html">types</a><br>
+<a href="sys.html">sys</a><br>
+</td><td width="25%" valign=top><a href="types.html">types</a><br>
 <a href="xml.html">xml</a><br>
-</td><td width="25%" valign=top></td></tr></table></td></tr></table><p>
+</td></tr></table></td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#ee77aa">
 <td colspan=3 valign=bottom>&nbsp;<br>
@@ -153,6 +161,14 @@ nmap_search_path&nbsp;=&nbsp;tupple&nbsp;of&nbsp;string&nbsp;where&nbsp;to&nbsp;
 &nbsp;<br>
 may&nbsp;raise&nbsp;AssertionError&nbsp;exception&nbsp;if&nbsp;called&nbsp;before&nbsp;scanning</tt></dd></dl>
 
+<dl><dt><a name="PortScanner-csv"><strong>csv</strong></a>(self)</dt><dd><tt>returns&nbsp;CSV&nbsp;output&nbsp;as&nbsp;text<br>
+&nbsp;<br>
+Example&nbsp;:<br>
+host;protocol;port;name;state;product;extrainfo;reason;version;conf<br>
+127.0.0.1;tcp;22;ssh;open;OpenSSH;protocol&nbsp;2.0;syn-ack;5.9p1&nbsp;Debian&nbsp;5ubuntu1;10<br>
+127.0.0.1;tcp;23;telnet;closed;;;conn-refused;;3<br>
+127.0.0.1;tcp;24;priv-mail;closed;;;conn-refused;;3</tt></dd></dl>
+
 <dl><dt><a name="PortScanner-get_nmap_last_output"><strong>get_nmap_last_output</strong></a>(self)</dt><dd><tt>returns&nbsp;the&nbsp;last&nbsp;text&nbsp;output&nbsp;of&nbsp;nmap&nbsp;in&nbsp;raw&nbsp;text<br>
 this&nbsp;may&nbsp;be&nbsp;used&nbsp;for&nbsp;debugging&nbsp;purpose</tt></dd></dl>
 
@@ -165,7 +181,10 @@ or&nbsp;(0,&nbsp;0)&nbsp;if&nbsp;unknown</tt></dd></dl>
 
 <dl><dt><a name="PortScanner-scan"><strong>scan</strong></a>(self, hosts<font color="#909090">='127.0.0.1'</font>, ports<font color="#909090">=None</font>, arguments<font color="#909090">='-sV'</font>)</dt><dd><tt>Scan&nbsp;given&nbsp;hosts<br>
 &nbsp;<br>
-May&nbsp;raise&nbsp;<a href="#PortScannerError">PortScannerError</a>&nbsp;exception&nbsp;if&nbsp;nmap&nbsp;output&nbsp;something&nbsp;on&nbsp;stderr<br>
+May&nbsp;raise&nbsp;<a href="#PortScannerError">PortScannerError</a>&nbsp;exception&nbsp;if&nbsp;nmap&nbsp;output&nbsp;was&nbsp;not&nbsp;xml<br>
+&nbsp;<br>
+Test&nbsp;existance&nbsp;of&nbsp;the&nbsp;following&nbsp;key&nbsp;to&nbsp;know&nbsp;if&nbsp;something&nbsp;went&nbsp;wrong&nbsp;:&nbsp;['nmap']['scaninfo']['error']<br>
+If&nbsp;not&nbsp;present,&nbsp;everything&nbsp;was&nbsp;ok.<br>
 &nbsp;<br>
 hosts&nbsp;=&nbsp;string&nbsp;for&nbsp;hosts&nbsp;as&nbsp;nmap&nbsp;use&nbsp;it&nbsp;'scanme.nmap.org'&nbsp;or&nbsp;'198.116.0-255.1-127'&nbsp;or&nbsp;'216.163.128.20/20'<br>
 ports&nbsp;=&nbsp;string&nbsp;for&nbsp;ports&nbsp;as&nbsp;nmap&nbsp;use&nbsp;it&nbsp;'22,53,110,143-4564'<br>
@@ -248,6 +267,8 @@ Data descriptors defined here:<br>
 Methods defined here:<br>
 <dl><dt><a name="PortScannerError-__init__"><strong>__init__</strong></a>(self, value)</dt></dl>
 
+<dl><dt><a name="PortScannerError-__repr__"><strong>__repr__</strong></a>(self)</dt></dl>
+
 <dl><dt><a name="PortScannerError-__str__"><strong>__str__</strong></a>(self)</dt></dl>
 
 <hr>
@@ -266,8 +287,6 @@ Methods inherited from <a href="builtins.html#BaseException">builtins.BaseExcept
 <dl><dt><a name="PortScannerError-__getattribute__"><strong>__getattribute__</strong></a>(...)</dt><dd><tt>x.<a href="#PortScannerError-__getattribute__">__getattribute__</a>('name')&nbsp;&lt;==&gt;&nbsp;x.name</tt></dd></dl>
 
 <dl><dt><a name="PortScannerError-__reduce__"><strong>__reduce__</strong></a>(...)</dt></dl>
-
-<dl><dt><a name="PortScannerError-__repr__"><strong>__repr__</strong></a>(...)</dt><dd><tt>x.<a href="#PortScannerError-__repr__">__repr__</a>()&nbsp;&lt;==&gt;&nbsp;repr(x)</tt></dd></dl>
 
 <dl><dt><a name="PortScannerError-__setattr__"><strong>__setattr__</strong></a>(...)</dt><dd><tt>x.<a href="#PortScannerError-__setattr__">__setattr__</a>('name',&nbsp;value)&nbsp;&lt;==&gt;&nbsp;x.name&nbsp;=&nbsp;value</tt></dd></dl>
 
@@ -335,6 +354,8 @@ Methods defined here:<br>
 <dl><dt><a name="PortScannerHostDict-tcp"><strong>tcp</strong></a>(self, port)</dt><dd><tt>returns&nbsp;info&nbsp;for&nbsp;tpc&nbsp;port</tt></dd></dl>
 
 <dl><dt><a name="PortScannerHostDict-udp"><strong>udp</strong></a>(self, port)</dt><dd><tt>returns&nbsp;info&nbsp;for&nbsp;udp&nbsp;port</tt></dd></dl>
+
+<dl><dt><a name="PortScannerHostDict-uptime"><strong>uptime</strong></a>(self)</dt><dd><tt>returns&nbsp;host&nbsp;state</tt></dd></dl>
 
 <hr>
 Data descriptors defined here:<br>
@@ -419,7 +440,7 @@ Data and other attributes inherited from <a href="builtins.html#dict">builtins.d
 <font color="#ffffff" face="helvetica, arial"><big><strong>Data</strong></big></font></td></tr>
     
 <tr><td bgcolor="#55aa55"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
-<td width="100%"><strong>__last_modification__</strong> = '2011.11.09'</td></tr></table><p>
+<td width="100%"><strong>__last_modification__</strong> = '2012.12.13'</td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#7799ee">
 <td colspan=3 valign=bottom>&nbsp;<br>
