@@ -1,12 +1,14 @@
 Changelog
 =========
 
-2012/12/16 (v0.2.7)
+2013/02/24 (v0.2.7)
  - added an address block in host scan result which contains ipv4, mac and other addresses :
    nm = nmap.PortScanner()
    r = nm.scan(arguments='-sS -p T:22', hosts='192.168.1.3')
    print r['scan']['192.168.1.3']['addresses']
    {u'mac': u'02:50:43:F4:02:B1', u'ipv4': u'192.168.1.3'}
+ - Adding a CSV scan output as a string.
+ - Changes examples.py to make it python3 compliant
 
 2012/12/13 (v0.2.6)
  - patch from lundberg.johan
